--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@blocdigital/usetoplayerelement",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "React hook for monitoring the top layer",
   "author": "Bloc Digital <web@bloc.digital>",
   "license": "MIT",
@@ -61,23 +61,27 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.20.1",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.2",
     "typescript": "^5.7.3",
-    "vite": "^6.1.0"
+    "vite": "^6.2.0"
   },
   "bugs": {
     "url": "https://github.com/bloc-digital/usetoplayerelement/issues"
+  },
+  "peerDependencies": {
+    "react": "^17 || ^18 || ^19",
+    "react-dom": "^17 || ^18 || ^19"
   }
 }
